# pipewire-screenaudio

./: .editorconfig  .eslintrc  .gitignore  .gitmodules  .prettierrc.yml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build-appimage.sh  flake.nix  install.sh  jsconfig.json  package-lock.json  package.json  tsconfig.json
.github/aur/: PKGBUILD.template
.github/workflows/: aur-deploy.yaml  main.yml  update-changelog.yaml
extension/: background.js  chromium-manifest.patch  index.js  injector.js  manifest-chrome.json  manifest.json  popup.html  popup.js
extension/assets/: popup.html
extension/assets/web/css/: button.css  global.css  select.css
extension/assets/web/html/: popup.html  settings.html
extension/react/: build-watcher.sh  build.sh  index.html  index.jsx  index.tsx  vite.config.js
extension/react/components/: button.jsx  nodes-table.jsx  nodes-table.tsx
extension/react/lib/: backend.js  backend.ts  backendTypes.d.ts  backendTypes.ts  hooks.js  hooks.ts  local-storage.js  local-storage.ts  match-node.js  match-node.ts  nativeMessageTypes.ts  types.ts  utils.js  utils.ts
extension/react/routes/: popup.jsx  popup.tsx  settings.jsx
extension/scripts/: background.js  index.js  injector.js  jsconfig.json  override-gdm.js  popup.js  settings.js
native/: CMakeLists.txt  build.sh  main.cpp  message-parser.c  pipewireScreenAudioConnector  screenAudioMicConnector  screenaudioctl.sh
native/connector/: cli.sh  connect-and-monitor.lua  connect-and-monitor.sh  extension-host-connector.sh  find-ports-by-node-id.lua  find-ports-by-node-serial.lua  find-screenaudio-node.lua  list-node-inputs.lua  list-nodes.lua  monitor-new-nodes.lua  monitor-node-deletion.lua  pipewire-screen-audio-connector.sh  pipewire-screenaudio.sh  util.sh  utils.lua  virtmic.sh  wait-screenaudio-node.lua  watcher.sh
native/connector-rs/: Cargo.toml
native/connector-rs/pipewire-utils/: Cargo.toml  rustfmt.toml
native/connector-rs/pipewire-utils/examples/: all-desktop-audio.rs  create-node.rs  watch-streams.rs
native/connector-rs/pipewire-utils/src/: cancellation_signal.rs  lib.rs  monitor.rs  pipewire_client.rs  pipewire_objects.rs  proxies.rs  refactor.md  roundtrip.rs  utils.rs
native/connector-rs/src/: command.rs  daemon.rs  dirs.rs  helpers.rs  io.rs  ipc.rs  ipc_request.rs  main.rs  monitor.rs
native/connector-rs/src/helpers/: io.rs  pipewire.rs
native/message-parser/: CMakeLists.txt
native/native-messaging-hosts/: chromium.json  com.icedborn.pipewirescreenaudioconnector.json  firefox.json  screenAudioMicConnector.json
native/pipewire-screenaudio/: CMakeLists.txt  main.cpp
native/screenaudio-mic/: CMakeLists.txt  main.cpp
pipewire-utils/: Cargo.toml
pipewire-utils/examples/: all-desktop-audio.rs  create-node.rs  watch-streams.rs
pipewire-utils/src/: lib.rs  proxies.rs  roundtrip.rs
