[package]
name = "connector-rs"
version = "0.3.5"
edition = "2021"

[dependencies]
fork = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
pipewire-utils.path = "pipewire-utils"
pipewire = "0.9.2"
thiserror = "2.0.17"
ctrlc = "3.5.1"
tracing.workspace = true
tracing-subscriber = "0.3.20"
tracing-appender = "0.2.3"

[workspace]
members = ["pipewire-utils"]
resolver = "3"

[workspace.dependencies]
tracing = "0.1.41"
