[package]
name = "pipewire-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libspa = "0.9.2"
libspa-sys = "0.9.2"
pipewire = "0.9.2"
pipewire-sys = "0.9.2"
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
ctrlc.workspace = true
tracing-subscriber.workspace = true
